--- a/SocialNetwork/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork/SocialNetwork.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
+    <Content Include="app\controllers\EditProfileController.js" />
     <Content Include="app\controllers\HeaderController.js" />
     <Content Include="app\controllers\LoginController.js" />
     <Content Include="app\controllers\PasswordChangeController.js" />
@@ -68,6 +69,7 @@
     <Content Include="app\services\Session.js" />
     <Content Include="app\services\UserQueryExecutor.js" />
     <Content Include="images\no-image.png" />
+    <Content Include="images\search.png" />
     <Content Include="images\welcome-image.jpg" />
     <Content Include="index.html" />
     <Content Include="libs\angular-cookies.js" />
@@ -77,18 +79,18 @@
     <Content Include="libs\jquery.noty.packaged.min.js" />
     <Content Include="styles\bootstrap.min.css" />
     <Content Include="styles\change-password-style.css" />
+    <Content Include="styles\edit-style.css" />
     <Content Include="styles\form-styles.css" />
-    <Content Include="styles\header.css" />
+    <Content Include="styles\header-style.css" />
     <Content Include="styles\main-style.css" />
     <Content Include="styles\style-welcome-screen.css" />
-    <Content Include="styles\style4.css" />
     <Content Include="views\change-password.html" />
     <Content Include="views\edit-profile.html" />
+    <Content Include="views\Header.html" />
     <Content Include="views\home-page.html" />
     <Content Include="views\login-form.html" />
     <Content Include="views\main.html" />
     <Content Include="views\register-form.html" />
-    <Content Include="views\header.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
