--- a/SocialNetwork/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork/SocialNetwork.csproj
@@ -63,11 +63,13 @@
     <Content Include="app\controllers\LoginController.js" />
     <Content Include="app\controllers\PasswordChangeController.js" />
     <Content Include="app\controllers\RegisterController.js" />
+    <Content Include="app\controllers\UserProfileController.js" />
     <Content Include="app\services\Authorization.js" />
     <Content Include="app\services\CurrentUserQueryExcecutor.js" />
     <Content Include="app\services\Notifications.js" />
     <Content Include="app\services\Session.js" />
     <Content Include="app\services\UserQueryExecutor.js" />
+    <Content Include="images\default-bg-user-image.jpg" />
     <Content Include="images\no-image.png" />
     <Content Include="images\search.png" />
     <Content Include="images\welcome-image.jpg" />
@@ -81,9 +83,10 @@
     <Content Include="styles\change-password-style.css" />
     <Content Include="styles\edit-style.css" />
     <Content Include="styles\form-styles.css" />
-    <Content Include="styles\heading.css" />
+    <Content Include="styles\heading-style.css" />
     <Content Include="styles\main-style.css" />
     <Content Include="styles\style-welcome-screen.css" />
+    <Content Include="styles\user-style.css" />
     <Content Include="views\change-password.html" />
     <Content Include="views\edit-profile.html" />
     <Content Include="views\heading.html" />
@@ -91,6 +94,7 @@
     <Content Include="views\login-form.html" />
     <Content Include="views\main.html" />
     <Content Include="views\register-form.html" />
+    <Content Include="views\user-profile.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
