--- a/SocialNetwork/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork/SocialNetwork.csproj
@@ -71,9 +71,12 @@
     <Content Include="app\services\Notifications.js" />
     <Content Include="app\services\Session.js" />
     <Content Include="app\services\UserQueryExecutor.js" />
+    <Content Include="images\comment-balloon.jpg" />
     <Content Include="images\default-bg-user-image.jpg" />
+    <Content Include="images\like_icon.png" />
     <Content Include="images\no-image.png" />
     <Content Include="images\search.png" />
+    <Content Include="images\unlike_icon.png" />
     <Content Include="images\welcome-image.jpg" />
     <Content Include="index.html" />
     <Content Include="libs\angular-cookies.js" />
@@ -85,8 +88,9 @@
     <Content Include="styles\change-password-style.css" />
     <Content Include="styles\edit-style.css" />
     <Content Include="styles\form-styles.css" />
-    <Content Include="styles\heading-style.css" />
+    <Content Include="styles\header-style.css" />
     <Content Include="styles\main-style.css" />
+    <Content Include="styles\style-for-header.css" />
     <Content Include="styles\style-friends.css" />
     <Content Include="styles\style-home.css" />
     <Content Include="styles\style-welcome-screen.css" />
@@ -94,7 +98,7 @@
     <Content Include="views\change-password.html" />
     <Content Include="views\edit-profile.html" />
     <Content Include="views\friends-view.html" />
-    <Content Include="views\header.html" />
+    <Content Include="views\heading.html" />
     <Content Include="views\home-page.html" />
     <Content Include="views\login-form.html" />
     <Content Include="views\main.html" />
