--- a/SocialNetwork/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork/SocialNetwork.csproj
@@ -89,10 +89,10 @@
     <Content Include="styles\edit-style.css" />
     <Content Include="styles\form-styles.css" />
     <Content Include="styles\header-style.css" />
+    <Content Include="styles\home-style.css" />
     <Content Include="styles\main-style.css" />
     <Content Include="styles\style-for-header.css" />
     <Content Include="styles\style-friends.css" />
-    <Content Include="styles\style-home.css" />
     <Content Include="styles\style-welcome-screen.css" />
     <Content Include="styles\user-style.css" />
     <Content Include="views\change-password.html" />
