--- a/SocialNetwork/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork/SocialNetwork.csproj
@@ -59,12 +59,13 @@
   <ItemGroup>
     <Content Include="app\app.js" />
     <Content Include="app\controllers\EditProfileController.js" />
-    <Content Include="app\controllers\FriendsController.js" />
+    <Content Include="app\controllers\MyFriendsController.js" />
     <Content Include="app\controllers\HeaderController.js" />
     <Content Include="app\controllers\HomePageController.js" />
     <Content Include="app\controllers\LoginController.js" />
     <Content Include="app\controllers\PasswordChangeController.js" />
     <Content Include="app\controllers\RegisterController.js" />
+    <Content Include="app\controllers\UserFriendsController.js" />
     <Content Include="app\controllers\UserProfileController.js" />
     <Content Include="app\services\Authorization.js" />
     <Content Include="app\services\CurrentUserQueryExcecutor.js" />
@@ -98,11 +99,13 @@
     <Content Include="styles\style-for-header.css" />
     <Content Include="styles\style-friends.css" />
     <Content Include="styles\style-welcome-screen.css" />
+    <Content Include="styles\user-friends-style.css" />
     <Content Include="styles\wall-style.css" />
     <Content Include="views\change-password.html" />
     <Content Include="views\edit-profile.html" />
+    <Content Include="views\friend-friends-view.html" />
     <Content Include="views\friends-view.html" />
-    <Content Include="views\heading.html" />
+    <Content Include="views\header.html" />
     <Content Include="views\home-page.html" />
     <Content Include="views\login-form.html" />
     <Content Include="views\main.html" />
