--- a/SocialNetwork/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork/SocialNetwork.csproj
@@ -100,7 +100,7 @@
     <Content Include="styles\user-friends-style.css" />
     <Content Include="styles\wall-style.css" />
     <Content Include="views\change-password.html" />
-    <Content Include="views\edit-profile.html" />
+    <Content Include="views\edit-profile-view.html" />
     <Content Include="views\friend-friends-view.html" />
     <Content Include="views\friends-view.html" />
     <Content Include="views\header.html" />
