--- a/SocialNetwork/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork/SocialNetwork.csproj
@@ -90,7 +90,7 @@
     <Content Include="libs\ng-infinite-scroll.js" />
     <Content Include="styles\bootstrap.min.css" />
     <Content Include="styles\change-password-style.css" />
-    <Content Include="styles\edit-style.css" />
+    <Content Include="styles\edit-profile-style.css" />
     <Content Include="styles\form-styles.css" />
     <Content Include="styles\header-style.css" />
     <Content Include="styles\home-page-style.css" />
