Renamed home-page.html to home-page-view.html Removed console.log on line 26, 219 and 227 in HomePageController.js

--- a/SocialNetwork/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork/SocialNetwork.csproj
@@ -102,7 +102,7 @@
     <Content Include="views\change-password-view.html" />
     <Content Include="views\edit-profile-view.html" />
     <Content Include="views\header-view.html" />
-    <Content Include="views\home-page.html" />
+    <Content Include="views\home-page-view.html" />
     <Content Include="views\login-form.html" />
     <Content Include="views\main.html" />
     <Content Include="views\my-friends-view.html" />
