--- a/SocialNetwork/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork/SocialNetwork.csproj
@@ -96,19 +96,19 @@
     <Content Include="styles\home-page-style.css" />
     <Content Include="styles\main-style.css" />
     <Content Include="styles\my-friends-style.css" />
-    <Content Include="styles\style-welcome-screen.css" />
     <Content Include="styles\user-friends-style.css" />
     <Content Include="styles\wall-style.css" />
+    <Content Include="styles\welcome-screen-style.css" />
     <Content Include="views\change-password-view.html" />
     <Content Include="views\edit-profile-view.html" />
     <Content Include="views\header-view.html" />
     <Content Include="views\home-page-view.html" />
-    <Content Include="views\login-form.html" />
-    <Content Include="views\main.html" />
+    <Content Include="views\login-view.html" />
     <Content Include="views\my-friends-view.html" />
     <Content Include="views\register-form.html" />
     <Content Include="views\user-friends-view.html" />
     <Content Include="views\user-profile.html" />
+    <Content Include="views\welcome-screen-view.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
