--- a/SocialNetwork/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork/SocialNetwork.csproj
@@ -97,7 +97,7 @@
     <Content Include="styles\main-style.css" />
     <Content Include="styles\my-friends-style.css" />
     <Content Include="styles\user-friends-style.css" />
-    <Content Include="styles\wall-style.css" />
+    <Content Include="styles\user-profile-style.css" />
     <Content Include="styles\welcome-screen-style.css" />
     <Content Include="views\change-password-view.html" />
     <Content Include="views\edit-profile-view.html" />
@@ -107,7 +107,7 @@
     <Content Include="views\my-friends-view.html" />
     <Content Include="views\register-form.html" />
     <Content Include="views\user-friends-view.html" />
-    <Content Include="views\user-profile.html" />
+    <Content Include="views\user-profile-view.html" />
     <Content Include="views\welcome-screen-view.html" />
     <Content Include="Web.config" />
   </ItemGroup>
